Fix Breakpoints and spacing
- Add large breakpoint for `.school-onboarding-wrapper`
- Fix `.school-onboarding-wrapper` spacing

--- a/src/assets/stylesheets/SchoolOnboarding.scss
+++ b/src/assets/stylesheets/SchoolOnboarding.scss
@@ -7,14 +7,19 @@
 .school-onboarding-wrapper {
   display: flex;
   flex-direction: column;
-  padding: var(--space-3);
+  padding: var(--space-4) var(--space-2);
   align-items: center;
-  gap: var(--space-2);
+  gap: var(--space-4);
   flex: 1 0 0;
   align-self: stretch;
 
-  @media screen and (min-width: 768px) {
-    padding: var(--space-8) calc(1.5 * var(--space-10));
+  @media screen and (min-width: 600px) {
+    padding: var(--space-5) var(--space-4);
+		gap: var(--space-5);
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding: var(--space-8) var(--space-10);
     gap: var(--space-8);
   }
 
@@ -39,7 +44,7 @@
   @include font-size-1-5(regular);
   margin: var(--space-2);
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 600px) {
     @include font-size-4(regular);
   }
 }
@@ -52,7 +57,7 @@
   text-align: start;
   padding: var(--space-3);
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 600px) {
     min-inline-size: 600px;
   }
 }
@@ -95,7 +100,7 @@
   align-items: center;
   margin-block-start: var(--space-3);
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 600px) {
     flex-direction: row;
     justify-content: flex-end;
   }
@@ -107,7 +112,7 @@
   justify-content: center;
   align-items: center;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 600px) {
     flex: inherit;
     width: fit-content;
   }
